@@ -7,18 +7,29 @@ import net.runelite.api.*;
 import net.runelite.api.coords.LocalPoint;
 import net.runelite.api.coords.WorldArea;
 import net.runelite.api.coords.WorldPoint;
+import net.runelite.api.widgets.ComponentID;
 import net.runelite.client.plugins.devtools.MovementFlag;
 import net.runelite.client.plugins.microbot.Microbot;
 import net.runelite.client.plugins.microbot.shortestpath.ShortestPathConfig;
 import net.runelite.client.plugins.microbot.shortestpath.ShortestPathPlugin;
 import net.runelite.client.plugins.microbot.shortestpath.Transport;
+import net.runelite.client.plugins.microbot.shortestpath.TransportType;
 import net.runelite.client.plugins.microbot.shortestpath.pathfinder.Pathfinder;
+import net.runelite.client.plugins.microbot.util.dialogues.Rs2Dialogue;
+import net.runelite.client.plugins.microbot.util.equipment.JewelleryLocationEnum;
+import net.runelite.client.plugins.microbot.util.equipment.Rs2Equipment;
 import net.runelite.client.plugins.microbot.util.gameobject.Rs2GameObject;
+import net.runelite.client.plugins.microbot.util.inventory.Rs2Inventory;
+import net.runelite.client.plugins.microbot.util.inventory.Rs2Item;
+import net.runelite.client.plugins.microbot.util.keyboard.Rs2Keyboard;
+import net.runelite.client.plugins.microbot.util.magic.Rs2Magic;
 import net.runelite.client.plugins.microbot.util.math.Random;
 import net.runelite.client.plugins.microbot.util.menu.NewMenuEntry;
 import net.runelite.client.plugins.microbot.util.npc.Rs2Npc;
 import net.runelite.client.plugins.microbot.util.player.Rs2Player;
 import net.runelite.client.plugins.microbot.util.tile.Rs2Tile;
+import net.runelite.client.plugins.microbot.util.widget.Rs2Widget;
+import net.runelite.client.plugins.skillcalculator.skills.MagicAction;
 import net.runelite.client.ui.overlay.worldmap.WorldMapPoint;
 
 import java.awt.*;
@@ -94,7 +105,7 @@ public class Rs2Walker {
                         continue;
                     }
 
-                    if (ShortestPathPlugin.getPathfinder().getPath().size() > 0 && isNear(ShortestPathPlugin.getPathfinder().getPath().get(ShortestPathPlugin.getPathfinder().getPath().size() - 1))) {
+                    if (!ShortestPathPlugin.getPathfinder().getPath().isEmpty() && isNear(ShortestPathPlugin.getPathfinder().getPath().get(ShortestPathPlugin.getPathfinder().getPath().size() - 1))) {
                         setTarget(null);
                         break;
                     }
@@ -125,14 +136,11 @@ public class Rs2Walker {
                     }
 
 
-                    /**
-                     * MAIN WALK LOOP
-                     */
                     boolean doorOrTransportResult = false;
                     for (int i = indexOfStartPoint; i < path.size(); i++) {
                         WorldPoint currentWorldPoint = path.get(i);
 
-                        if (i > 0 && !Rs2Tile.isTileReachable(path.get(i - 1)) && !Microbot.getClient().isInInstancedRegion()) {
+                        if (i > 0 && !Rs2Tile.isTileReachable(path.get(i - 1)) && !Microbot.getClient().getTopLevelWorldView().isInstance()) {
                             continue;
                         }
 
@@ -140,15 +148,13 @@ public class Rs2Walker {
                             break;
                         }
 
-                        /**
-                         * CHECK DOORS
-                         */
+
                         doorOrTransportResult = handleDoors(path, i);
                         if (doorOrTransportResult) {
                             break;
                         }
 
-                        if (!Microbot.getClient().isInInstancedRegion()) {
+                        if (!Microbot.getClient().getTopLevelWorldView().isInstance()) {
                             doorOrTransportResult = handleTransports(path, i);
                         }
 
@@ -156,13 +162,13 @@ public class Rs2Walker {
                             break;
                         }
 
-                        if (!Rs2Tile.isTileReachable(currentWorldPoint) && !Microbot.getClient().isInInstancedRegion()) {
+                        if (!Rs2Tile.isTileReachable(currentWorldPoint) && !Microbot.getClient().getTopLevelWorldView().isInstance()) {
                             continue;
                         }
 
                         if (currentWorldPoint.distanceTo2D(Rs2Player.getWorldLocation()) > nextWalkingDistance) {
                             nextWalkingDistance = Random.random(7, 11);
-                            if (Microbot.getClient().isInInstancedRegion()) {
+                            if (Microbot.getClient().getTopLevelWorldView().isInstance()) {
                                 Rs2Walker.walkFastCanvas(currentWorldPoint);
                                 sleepGaussian(1200, 300);
                             } else {
@@ -180,12 +186,12 @@ public class Rs2Walker {
 
 
                     if (!doorOrTransportResult) {
-                        if (path.size() > 0) {
+                        if (!path.isEmpty()) {
                             var moveableTiles = Rs2Tile.getReachableTilesFromTile(path.get(path.size() - 1), Math.min(3, distance)).keySet().toArray(new WorldPoint[0]);
                             var finalTile = moveableTiles.length > 0 ? moveableTiles[Random.random(0, moveableTiles.length)] : path.get(path.size() - 1);
                             if (Rs2Tile.isTileReachable(finalTile)) {
 
-                                if (Microbot.getClient().isInInstancedRegion())
+                                if (Microbot.getClient().getTopLevelWorldView().isInstance())
                                     Rs2Walker.walkFastCanvas(finalTile);
                                 else
                                     Rs2Walker.walkMiniMap(finalTile);
@@ -201,7 +207,6 @@ public class Rs2Walker {
                 Microbot.log("Microbot Walker Exception " + ex.getMessage());
                 System.out.println(ex.getMessage());
                 ex.printStackTrace(System.out);
-                currentTarget = null;
             }
             return false;
         });
@@ -212,8 +217,8 @@ public class Rs2Walker {
         var tiles = Rs2Tile.getReachableTilesFromTile(target, 1);
 
         var localPoint = LocalPoint.fromWorld(Microbot.getClient().getTopLevelWorldView(), target);
-        if (Microbot.getClient().getCollisionMaps() != null && localPoint != null) {
-            int[][] flags = Microbot.getClient().getCollisionMaps()[Microbot.getClient().getPlane()].getFlags();
+        if (Microbot.getClient().getTopLevelWorldView().getCollisionMaps() != null && localPoint != null) {
+            int[][] flags = Microbot.getClient().getTopLevelWorldView().getCollisionMaps()[Microbot.getClient().getTopLevelWorldView().getPlane()].getFlags();
 
             if (hasMinimapRelevantMovementFlag(localPoint, flags)) {
                 for (var tile : tiles.keySet()) {
@@ -289,19 +294,13 @@ public class Rs2Walker {
         return walkMiniMap(worldPoint, 5);
     }
 
-    public static boolean walkMiniMap(WorldArea area) {
-        var points = area.toWorldPointList();
-        var index = new java.util.Random().nextInt(points.size());
-        return Rs2Walker.walkMiniMap(points.get(index));
-    }
-
     /**
-     * Used in instances like vorkath, jad
+     * Used in instances like vorkath, jad, nmz
      *
-     * @param localPoint
+     * @param localPoint  A two-dimensional point in the local coordinate space.
      */
     public static void walkFastLocal(LocalPoint localPoint) {
-        Point canv = Perspective.localToCanvas(Microbot.getClient(), localPoint, Microbot.getClient().getPlane());
+        Point canv = Perspective.localToCanvas(Microbot.getClient(), localPoint, Microbot.getClient().getTopLevelWorldView().getPlane());
         int canvasX = canv != null ? canv.getX() : -1;
         int canvasY = canv != null ? canv.getY() : -1;
 
@@ -317,12 +316,19 @@ public class Rs2Walker {
         Rs2Player.toggleRunEnergy(toogleRun);
         Point canv;
         if (Microbot.getClient().getTopLevelWorldView().isInstance()) {
-            worldPoint = WorldPoint.toLocalInstance(Microbot.getClient().getTopLevelWorldView(), worldPoint).stream().findFirst().get();
+            worldPoint = WorldPoint.toLocalInstance(Microbot.getClient().getTopLevelWorldView(), worldPoint).stream().findFirst().orElse(null);
+            if (worldPoint == null) {
+                Microbot.log("Tried to walk using the canvas but worldPoint returned null");
+                return;
+            }
             LocalPoint localPoint = LocalPoint.fromWorld(Microbot.getClient().getTopLevelWorldView(), worldPoint);
-            canv = Perspective.localToCanvas(Microbot.getClient(), localPoint, Microbot.getClient().getPlane());
-        } else {
-            LocalPoint localPoint = LocalPoint.fromScene(worldPoint.getX() - Microbot.getClient().getTopLevelWorldView().getBaseX(), worldPoint.getY() - Microbot.getClient().getTopLevelWorldView().getBaseY());
+            if (localPoint == null) {
+                Microbot.log("Tried to walk using the canvas but localpoint returned null");
+                return;
+            }
             canv = Perspective.localToCanvas(Microbot.getClient(), localPoint, Microbot.getClient().getTopLevelWorldView().getPlane());
+        } else {
+            canv = Perspective.localToCanvas(Microbot.getClient(), LocalPoint.fromScene(worldPoint.getX() - Microbot.getClient().getTopLevelWorldView().getBaseX(), worldPoint.getY() - Microbot.getClient().getTopLevelWorldView().getBaseY(), Microbot.getClient().getTopLevelWorldView().getScene()), Microbot.getClient().getTopLevelWorldView().getPlane());
         }
 
         int canvasX = canv != null ? canv.getX() : -1;
@@ -332,7 +338,12 @@ public class Rs2Walker {
     }
 
     public static WorldPoint walkCanvas(WorldPoint worldPoint) {
-        Point point = Perspective.localToCanvas(Microbot.getClient(), LocalPoint.fromWorld(Microbot.getClient(), worldPoint), Microbot.getClient().getPlane());
+        LocalPoint localPoint = LocalPoint.fromWorld(Microbot.getClient().getTopLevelWorldView(), worldPoint);
+        if (localPoint == null) {
+            Microbot.log("Tried to walkCanvas but localpoint returned null");
+            return null;
+        }
+        Point point = Perspective.localToCanvas(Microbot.getClient(), localPoint, Microbot.getClient().getTopLevelWorldView().getPlane());
 
         if (point == null) return null;
 
@@ -349,9 +360,8 @@ public class Rs2Walker {
         sleepUntil(pathfinder::isDone);
         WorldArea pathArea = new WorldArea(pathfinder.getPath().get(pathfinder.getPath().size() - 1), pathSizeX, pathSizeY);
         WorldArea objectArea = new WorldArea(worldPoint, sizeX + 2, sizeY + 2);
-        boolean result = pathArea
+        return pathArea
                 .intersectsWith2D(objectArea);
-        return result;
     }
 
     // takes an avg 200-300 ms
@@ -362,9 +372,8 @@ public class Rs2Walker {
         sleepUntil(pathfinder::isDone);
         WorldArea pathArea = new WorldArea(pathfinder.getPath().get(pathfinder.getPath().size() - 1), 3, 3);
         WorldArea objectArea = new WorldArea(worldPoint, sizeX + 2, sizeY + 2);
-        boolean result = pathArea
+        return pathArea
                 .intersectsWith2D(objectArea);
-        return result;
     }
 
     public static boolean canReach(WorldPoint worldPoint) {
@@ -374,16 +383,15 @@ public class Rs2Walker {
         if (pathfinder.getPath().get(pathfinder.getPath().size() - 1).getPlane() != worldPoint.getPlane()) return false;
         WorldArea pathArea = new WorldArea(pathfinder.getPath().get(pathfinder.getPath().size() - 1), 2, 2);
         WorldArea objectArea = new WorldArea(worldPoint, 2, 2);
-        boolean result = pathArea
+        return pathArea
                 .intersectsWith2D(objectArea);
-        return result;
     }
 
     public static boolean isCloseToRegion(int distance, int regionX, int regionY) {
         WorldPoint worldPoint = WorldPoint.fromRegion(Microbot.getClient().getLocalPlayer().getWorldLocation().getRegionID(),
                 regionX,
                 regionY,
-                Microbot.getClient().getPlane());
+                Microbot.getClient().getTopLevelWorldView().getPlane());
 
         return worldPoint.distanceTo(Microbot.getClient().getLocalPlayer().getWorldLocation()) < distance;
     }
@@ -392,7 +400,7 @@ public class Rs2Walker {
         WorldPoint worldPoint = WorldPoint.fromRegion(Microbot.getClient().getLocalPlayer().getWorldLocation().getRegionID(),
                 regionX,
                 regionY,
-                Microbot.getClient().getPlane());
+                Microbot.getClient().getTopLevelWorldView().getPlane());
 
         return worldPoint.distanceTo(Microbot.getClient().getLocalPlayer().getWorldLocation());
     }
@@ -442,19 +450,11 @@ public class Rs2Walker {
                 if (doorIndex == index) {
                     // Forward
                     var neighborPoint = path.get(doorIndex + 1);
-                    if (orientation == 1 && point.dx(-1).getX() == neighborPoint.getX()
-                            || orientation == 4 && point.dx(+1).getX() == neighborPoint.getX()
-                            || orientation == 2 && point.dy(1).getY() == neighborPoint.getY()
-                            || orientation == 8 && point.dy(-1).getY() == neighborPoint.getY())
-                        found = true;
+                    found = searchNeighborPoint(orientation, point, neighborPoint);
                 } else if (doorIndex == index + 1) {
                     // Backward
                     var neighborPoint = path.get(doorIndex - 1);
-                    if (orientation == 1 && point.dx(-1).getX() == neighborPoint.getX()
-                            || orientation == 4 && point.dx(+1).getX() == neighborPoint.getX()
-                            || orientation == 2 && point.dy(1).getY() == neighborPoint.getY()
-                            || orientation == 8 && point.dy(-1).getY() == neighborPoint.getY())
-                        found = true;
+                    found = searchNeighborPoint(orientation, point, neighborPoint);
 
                     // Diagonal objects with any orientation
                     if (index + 2 < path.size() && (orientation == 16 || orientation == 32 || orientation == 64 || orientation == 128)) {
@@ -468,7 +468,7 @@ public class Rs2Walker {
             } else if (object instanceof GameObject) {
                 // Match game objects by name
                 // Orientation does not work as game objects are not strictly oriented like walls
-                var objectNames = Arrays.asList("door");
+                var objectNames = List.of("door");
 
                 if (objectNames.contains(objectComp.getName().toLowerCase()))
                     found = true;
@@ -476,7 +476,6 @@ public class Rs2Walker {
 
 
             if (found) {
-                System.out.println(action);
                 Rs2GameObject.interact(object, action);
                 Rs2Player.waitForWalking();
                 return true;
@@ -486,9 +485,16 @@ public class Rs2Walker {
         return false;
     }
 
+    private static boolean searchNeighborPoint(int orientation, WorldPoint point, WorldPoint neighborPoint) {
+        return orientation == 1 && point.dx(-1).getX() == neighborPoint.getX()
+                || orientation == 4 && point.dx(+1).getX() == neighborPoint.getX()
+                || orientation == 2 && point.dy(1).getY() == neighborPoint.getY()
+                || orientation == 8 && point.dy(-1).getY() == neighborPoint.getY();
+    }
+
     /**
-     * @param path
-     * @return
+     * @param path list of worldpoints
+     * @return closest tile index
      */
     public static int getClosestTileIndex(List<WorldPoint> path) {
         WorldPoint startPoint;
@@ -511,10 +517,11 @@ public class Rs2Walker {
     }
 
     /**
+     *
      * @param target
      */
     public static void setTarget(WorldPoint target) {
-        if (!Microbot.isLoggedIn()) return;
+        if (!Microbot.isLoggedIn() && target != null) return;
         Player localPlayer = Microbot.getClient().getLocalPlayer();
         if (!ShortestPathPlugin.isStartPointSet() && localPlayer == null) {
             return;
@@ -541,7 +548,7 @@ public class Rs2Walker {
             ShortestPathPlugin.getMarker().setJumpOnClick(true);
             Microbot.getWorldMapPointManager().add(ShortestPathPlugin.getMarker());
 
-            WorldPoint start = Microbot.getClient().isInInstancedRegion() ?
+            WorldPoint start = Microbot.getClient().getTopLevelWorldView().isInstance() ?
                     WorldPoint.fromLocalInstance(Microbot.getClient(), localPlayer.getLocalLocation()) : localPlayer.getWorldLocation();
             ShortestPathPlugin.setLastLocation(start);
             if (ShortestPathPlugin.isStartPointSet() && ShortestPathPlugin.getPathfinder() != null) {
@@ -585,16 +592,20 @@ public class Rs2Walker {
      */
     public static Tile getTile(WorldPoint point) {
         LocalPoint a;
-        if (Microbot.getClient().isInInstancedRegion()) {
-            WorldPoint instancedWorldPoint = WorldPoint.toLocalInstance(Microbot.getClient(), point).stream().findFirst().get();
-            a = LocalPoint.fromWorld(Microbot.getClient(), instancedWorldPoint);
+        if (Microbot.getClient().getTopLevelWorldView().isInstance()) {
+            WorldPoint instancedWorldPoint = WorldPoint.toLocalInstance(Microbot.getClient().getTopLevelWorldView(), point).stream().findFirst().orElse(null);
+            if (instancedWorldPoint == null) {
+                Microbot.log("getTile instancedWorldPoint is null");
+                return null;
+            }
+            a = LocalPoint.fromWorld(Microbot.getClient().getTopLevelWorldView(), instancedWorldPoint);
         } else {
-            a = LocalPoint.fromWorld(Microbot.getClient(), point);
+            a = LocalPoint.fromWorld(Microbot.getClient().getTopLevelWorldView(), point);
         }
         if (a == null) {
             return null;
         }
-        return Microbot.getClient().getScene().getTiles()[point.getPlane()][a.getSceneX()][a.getSceneY()];
+        return Microbot.getClient().getTopLevelWorldView().getScene().getTiles()[point.getPlane()][a.getSceneX()][a.getSceneY()];
     }
 
     /**
@@ -603,32 +614,50 @@ public class Rs2Walker {
      * @return
      */
     public static boolean handleTransports(List<WorldPoint> path, int indexOfStartPoint) {
-        for (Transport b : ShortestPathPlugin.getTransports().getOrDefault(path.get(indexOfStartPoint), new ArrayList<>())) {
-            for (WorldPoint origin : WorldPoint.toLocalInstance(Microbot.getClient(), b.getOrigin())) {
-                if (Rs2Player.getWorldLocation().getPlane() != b.getOrigin().getPlane()) {
+        // Edgeville/ardy wilderness lever warning
+        if (Rs2Widget.isWidgetVisible(229, 1)) {
+            Microbot.log("Detected Wilderness lever warning, interacting...");
+            Rs2Dialogue.clickContinue();
+            sleep(1200, 2400);
+            return true;
+        }
+
+        // Wilderness ditch warning
+        if (Rs2Widget.isWidgetVisible(475, 11)) {
+            Microbot.log("Detected Wilderness warning, interacting...");
+            Rs2Widget.clickWidget(475, 11);
+            sleepUntil(Rs2Player::isAnimating);
+            return true;
+        }
+
+        for (Transport transport : ShortestPathPlugin.getTransports().getOrDefault(path.get(indexOfStartPoint), new HashSet<>())) {
+            for (WorldPoint origin : WorldPoint.toLocalInstance(Microbot.getClient().getTopLevelWorldView(), transport.getOrigin())) {
+                if (transport.getOrigin() != null && Rs2Player.getWorldLocation().getPlane() != transport.getOrigin().getPlane()) {
                     continue;
                 }
 
                 for (int i = indexOfStartPoint; i < path.size(); i++) {
-                    if (origin.getPlane() != Rs2Player.getWorldLocation().getPlane())
+                    if (origin != null && origin.getPlane() != Rs2Player.getWorldLocation().getPlane())
                         continue;
-                    if (path.stream().noneMatch(x -> x.equals(b.getDestination()))) continue;
+                    if (path.stream().noneMatch(x -> x.equals(transport.getDestination()))) continue;
 
-                    int indexOfOrigin = IntStream.range(0, path.size())
-                            .filter(f -> path.get(f).equals(b.getOrigin()))
-                            .findFirst()
-                            .orElse(-1);
-                    int indexOfDestination = IntStream.range(0, path.size())
-                            .filter(f -> path.get(f).equals(b.getDestination()))
-                            .findFirst()
-                            .orElse(-1);
-                    if (indexOfDestination == -1) continue;
-                    if (indexOfOrigin == -1) continue;
-                    if (indexOfDestination < indexOfOrigin) continue;
+                    if (transport.getType() != TransportType.TELEPORTATION_ITEM && transport.getType() != TransportType.TELEPORTATION_SPELL) {
+                        int indexOfOrigin = IntStream.range(0, path.size())
+                                .filter(f -> path.get(f).equals(transport.getOrigin()))
+                                .findFirst()
+                                .orElse(-1);
+                        int indexOfDestination = IntStream.range(0, path.size())
+                                .filter(f -> path.get(f).equals(transport.getDestination()))
+                                .findFirst()
+                                .orElse(-1);
+                        if (indexOfDestination == -1) continue;
+                        if (indexOfOrigin == -1) continue;
+                        if (indexOfDestination < indexOfOrigin) continue;
+                    }
 
                     if (path.get(i).equals(origin)) {
-                        if (b.isShip() || b.isNpc() || b.isBoat()) {
-                            var npcAndAction = String.format("%s %s", b.getAction(), b.getNpcName());
+                        if (transport.getType() == TransportType.SHIP || transport.getType() == TransportType.NPC || transport.getType() == TransportType.BOAT) {
+                            var npcAndAction = String.format("%s %s", transport.getAction(), transport.getName());
                             NPC npc = null;
                             String action = "";
                             for (int n = npcAndAction.indexOf(" "); n >= 0; n = npcAndAction.indexOf(" ", n + 1)) {
@@ -649,76 +678,198 @@ public class Rs2Walker {
                         }
                     }
 
-                    if (b.getObjectName() != null && b.getObjectName().contains("trapdoor") && b.getDestination().distanceTo2D(Rs2Player.getWorldLocation()) > 20) {
-                        if (handleTrapdoor(b))
+
+                    if (transport.getName() != null && transport.getName().contains("trapdoor") && transport.getDestination().distanceTo2D(Rs2Player.getWorldLocation()) > 20) {
+                        if (handleTrapdoor(transport))
                             break;
                     }
 
-                    if (b.isSpiritTree()) {
-                        b.handleSpiritTree();
+                    if (transport.getType() == TransportType.SPIRIT_TREE) {
+                        handleSpiritTree(transport);
                     }
 
 
-                    if (b.isGnomeGlider() && b.getOrigin().distanceTo(Rs2Player.getWorldLocation()) < 12) {
-                        b.handleGlider();
+                    if (transport.getType() == TransportType.GNOME_GLIDER && transport.getOrigin().distanceTo(Rs2Player.getWorldLocation()) < 12) {
+                        handleGlider(transport);
                     }
 
-                    if (b.isFairyRing() && !Rs2Player.getWorldLocation().equals(b.getDestination())) {
-                        b.handleFairyRing();
+                    if (transport.getType() == TransportType.FAIRY_RING && !Rs2Player.getWorldLocation().equals(transport.getDestination())) {
+                        handleFairyRing(transport.getOrigin(), transport.getDisplayInfo());
+                    }
+
+                    if (transport.getType() == TransportType.TELEPORTATION_ITEM) {
+                        if (handleTeleportItem(transport))
+                            break;
+                    }
+
+                    if (transport.getType() == TransportType.TELEPORTATION_SPELL) {
+                        if (handleTeleportSpell(transport))
+                            break;
                     }
 
 
-                    GameObject gameObject = Rs2GameObject.getGameObjects(b.getObjectId(), b.getOrigin()).stream().findFirst().orElse(null);
+                    GameObject gameObject = Rs2GameObject.getGameObjects(transport.getObjectId(), transport.getOrigin()).stream().findFirst().orElse(null);
                     //check game objects
-                    if (gameObject != null && gameObject.getId() == b.getObjectId()) {
-                        if (!Rs2Tile.isTileReachable(b.getOrigin())) {
+                    if (gameObject != null && gameObject.getId() == transport.getObjectId()) {
+                        if (!Rs2Tile.isTileReachable(transport.getOrigin())) {
                             break;
                         }
-                        Rs2GameObject.interact(gameObject, b.getAction());
-                        if (b.getDestination().getPlane() == Rs2Player.getWorldLocation().getPlane()) {
-                            if (b.isAgilityShortcut()) {
-                                Rs2Player.waitForAnimation();
-                            } else {
-                                Rs2Player.waitForWalking();
-                            }
-                        } else {
-                            int z = Rs2Player.getWorldLocation().getPlane();
-                            sleepUntil(() -> Rs2Player.getWorldLocation().getPlane() != z);
-                            sleep(Random.randomGaussian(1000, 300));
-                        }
+                        handleObject(transport, gameObject);
                         return true;
                     }
 
                     //check tile objects
-                    List<TileObject> tileObjects = Rs2GameObject.getTileObjects(b.getObjectId(), b.getOrigin());
+                    List<TileObject> tileObjects = Rs2GameObject.getTileObjects(transport.getObjectId(), transport.getOrigin());
                     TileObject tileObject = tileObjects.stream().findFirst().orElse(null);
                     if (tileObject instanceof GroundObject)
                         tileObject = tileObjects.stream()
                                 .filter(x -> !x.getWorldLocation().equals(Rs2Player.getWorldLocation()))
-                                .min(Comparator.comparing(x -> ((TileObject) x).getWorldLocation().distanceTo(b.getOrigin()))
-                                        .thenComparing(x -> ((TileObject) x).getWorldLocation().distanceTo(b.getDestination()))).orElse(null);
+                                .min(Comparator.comparing(x -> ((TileObject) x).getWorldLocation().distanceTo(transport.getOrigin()))
+                                        .thenComparing(x -> ((TileObject) x).getWorldLocation().distanceTo(transport.getDestination()))).orElse(null);
 
-                    if (tileObject != null && tileObject.getId() == b.getObjectId()) {
-                        if (tileObject.getId() != 16533 && !Rs2Tile.isTileReachable(b.getOrigin())) {
+                    if (tileObject != null && tileObject.getId() == transport.getObjectId()) {
+                        if (tileObject.getId() != 16533 && !Rs2Tile.isTileReachable(transport.getOrigin())) {
                             break;
                         }
-                        Rs2GameObject.interact(tileObject, b.getAction());
-                        if (b.getDestination().getPlane() == Rs2Player.getWorldLocation().getPlane()) {
-                            if (b.isAgilityShortcut()) {
-                                Rs2Player.waitForAnimation();
-                            } else {
-                                Rs2Player.waitForWalking();
-                            }
-                        } else {
-                            int z = Rs2Player.getWorldLocation().getPlane();
-                            sleepUntil(() -> Rs2Player.getWorldLocation().getPlane() != z);
-                            sleep(Random.randomGaussian(1000, 300));
-                        }
+                        handleObject(transport, tileObject);
                         return true;
                     }
                 }
 
             }
+        }
+        return false;
+    }
+
+    private static void handleObject(Transport transport, TileObject tileObject) {
+        Rs2GameObject.interact(tileObject, transport.getAction());
+        if (transport.getDestination().getPlane() == Rs2Player.getWorldLocation().getPlane()) {
+            if (handleObjectExceptions(tileObject)) return;
+            if (transport.getType() == TransportType.AGILITY_SHORTCUT) {
+                Rs2Player.waitForAnimation();
+            } else {
+                Rs2Player.waitForWalking();
+            }
+        } else {
+            int z = Rs2Player.getWorldLocation().getPlane();
+            sleepUntil(() -> Rs2Player.getWorldLocation().getPlane() != z);
+            sleep(Random.randomGaussian(1000, 300));
+        }
+    }
+
+    private static boolean handleObjectExceptions(TileObject tileObject) {
+        //Al kharid broken wall will animate once and then stop and then animate again
+        if (tileObject.getId() == 33344 || tileObject.getId() == 33348) {
+            Rs2Player.waitForAnimation();
+            Rs2Player.waitForAnimation();
+            return true;
+        }
+        return false;
+    }
+
+    private static boolean handleTeleportSpell(Transport transport) {
+        MagicAction magicSpell = Arrays.stream(MagicAction.values()).filter(x -> x.getName().toLowerCase().contains(transport.getDisplayInfo())).findFirst().orElse(null);
+        if (magicSpell != null) {
+            return Rs2Magic.cast(magicSpell);
+        }
+        return false;
+    }
+
+    private static boolean handleTeleportItem(Transport transport) {
+        boolean succesfullAction = false;
+        for (Set<Integer> itemIds : transport.getItemIdRequirements()) {
+            if (succesfullAction)
+                break;
+            for (Integer itemId : itemIds) {
+                if (Rs2Walker.currentTarget == null) break;
+                if (Rs2Player.getWorldLocation().distanceTo2D(transport.getDestination()) < config.reachedDistance())
+                    break;
+                if (succesfullAction) break;
+
+                System.out.println(itemId);
+
+                //If an action is succesfully we break out of the loop
+                succesfullAction = handleInventoryTeleports(transport, itemId) || handleWearableTeleports(transport, itemId);
+
+            }
+        }
+        return succesfullAction;
+    }
+
+    public static boolean handleInventoryTeleports(Transport transport, int itemId) {
+        Rs2Item rs2Item = Rs2Inventory.get(itemId);
+        boolean hasItem = rs2Item != null;
+        List<String> actions = Arrays.asList("break", "teleport", "empty", "lletya", "prifddinas", "commune", "Rellekka", "Waterbirth Island", "Neitiznot", "Jatiszo",
+                "Ver Sinhaza", "Darkmeyer", "Slepe", "Troll Stronghold", "Weiss", "invoke", "rub");
+        if (!hasItem) return false;
+        boolean hasMultipleDestination = transport.getDisplayInfo().contains(":");
+        //hasMultipleDestination is stuff like: games neck, ring of dueling etc...
+        final int OFFSET = 10;// max offset of the exact area we teleport to
+        if (hasMultipleDestination) {
+            String[] values = transport.getDisplayInfo().split(":");
+            String destination = values[1].trim().toLowerCase();
+            String itemAction = Arrays.stream(rs2Item.getInventoryActions())
+                    .filter(action -> action != null && actions.contains(action.toLowerCase()))
+                    .findFirst()
+                    .orElse(null);
+            if (itemAction == null) return false;
+            if (itemAction.equalsIgnoreCase("rub")) {
+                if (Rs2Inventory.interact(itemId, itemAction)) {
+                    sleepUntil(() -> Rs2Widget.getWidget(219, 1) != null);
+                    Rs2Widget.sleepUntilHasWidgetText(destination, 219, 1, false, 5000);
+                    Rs2Widget.clickWidget(destination, Optional.of(219), 1, false);
+                    return sleepUntilTrue(() -> Rs2Player.getWorldLocation().distanceTo2D(transport.getDestination()) < OFFSET, 100, 5000);
+                }
+            }
+        }
+
+        //Simple items with one destination like teleport tabs, teleport scrolls etc...
+        String itemAction = Arrays.stream(rs2Item.getInventoryActions())
+                .filter(action -> action != null && actions.contains(action.toLowerCase()))
+                .findFirst()
+                .orElse(null);
+        if (itemAction == null) return false;
+        if (Rs2Inventory.interact(itemId, itemAction)) {
+            return sleepUntilTrue(() -> Rs2Player.getWorldLocation().distanceTo2D(transport.getDestination()) < OFFSET, 100, 5000);
+        }
+
+        return false;
+    }
+
+    private static boolean handleWearableTeleports(Transport transport, int itemId) {
+        if (Rs2Equipment.isWearing(itemId)) {
+            System.out.println("is wearing " + itemId);
+            JewelleryLocationEnum jewelleryTransport;
+            if (transport.getDisplayInfo().contains(":")) {
+                String[] values = transport.getDisplayInfo().split(":");
+                String jewelleryName = values[0].trim().toLowerCase();
+                String destination = values[1].trim().toLowerCase();
+                jewelleryTransport = Arrays
+                        .stream(JewelleryLocationEnum.values())
+                        .filter(x -> x.getTooltip().toLowerCase().contains(jewelleryName)
+                                && x.getDestination().toLowerCase().contains(destination)
+                                || x.getLocation().equals(transport.getDestination()))
+                        .findFirst()
+                        .orElse(null);
+            } else {
+                jewelleryTransport = Arrays.stream(JewelleryLocationEnum.values()).filter(x -> x.getTooltip().toLowerCase().contains(transport.getDisplayInfo().toLowerCase())).findFirst().orElse(null);
+            }
+            if (jewelleryTransport == null) return false;
+            return interactWithJewellery(transport, jewelleryTransport);
+        }
+        return false;
+    }
+
+    private static boolean interactWithJewellery(Transport transport, JewelleryLocationEnum jewelleryTransport) {
+        final int OFFSET = 10;
+        boolean action;
+        if (jewelleryTransport.getTooltip().toLowerCase().contains("ring")) {
+            action = Rs2Equipment.useRingAction(jewelleryTransport);
+        } else {
+            action = Rs2Equipment.useAmuletAction(jewelleryTransport);
+        }
+        if (action) {
+            return sleepUntilTrue(() -> Rs2Player.getWorldLocation().distanceTo2D(transport.getDestination()) < OFFSET, 100, 5000);
         }
         return false;
     }
@@ -746,7 +897,7 @@ public class Rs2Walker {
                 .findFirst().orElse(null);
         if (trapdoor != null) {
             Rs2GameObject.interact(trapdoor, "open");
-            sleepGaussian( 1200, 300);
+            sleepGaussian(1200, 300);
             return true;
         }
         return false;
@@ -774,6 +925,7 @@ public class Rs2Walker {
      * @param range        an int of range to which the boundaries will be drawn in a square,
      * @return true if the player's current location is within the specified area, false otherwise
      */
+    @Deprecated(since="1.5.5", forRemoval = true)
     public static boolean isInArea(WorldPoint centerOfArea, int range) {
         WorldPoint nwCorner = new WorldPoint(centerOfArea.getX() + range + range, centerOfArea.getY() - range, centerOfArea.getPlane());
         WorldPoint seCorner = new WorldPoint(centerOfArea.getX() - range - range, centerOfArea.getY() + range, centerOfArea.getPlane());
@@ -829,5 +981,210 @@ public class Rs2Walker {
         pathfindingExecutor.submit(pathfinder);
         sleepUntil(pathfinder::isDone);
         return pathfinder.getPath().size();
+    }
+
+    public static void handleSpiritTree(Transport transport) {
+        // Get Transport Information
+        String displayInfo = transport.getDisplayInfo();
+        int objectId = transport.getObjectId();
+
+        // Check if the widget is already visible
+        if (!Rs2Widget.isHidden(ComponentID.ADVENTURE_LOG_CONTAINER)) {
+            System.out.println("Widget is already visible. Skipping interaction.");
+            char key = displayInfo.charAt(0);
+            Rs2Keyboard.keyPress(key);
+            Microbot.log("Pressing: " + key);
+            return;
+        }
+
+        // Find the spirit tree object
+        TileObject spiritTree = Rs2GameObject.findObjectById(objectId);
+        if (spiritTree == null) {
+            Microbot.log("Spirit tree not found.");
+            return;
+        }
+
+        // Interact with the spirit tree
+        Rs2GameObject.interact(spiritTree);
+
+        // Wait for the widget to become visible
+        boolean widgetVisible = !Rs2Widget.isHidden(ComponentID.ADVENTURE_LOG_CONTAINER);
+        if (!widgetVisible) {
+            Microbot.log("Widget did not become visible within the timeout.");
+            return;
+        }
+
+        char key = displayInfo.charAt(0);
+        Rs2Keyboard.keyPress(key);
+        Microbot.log("Pressing: " + key);
+    }
+
+    public static void handleGlider(Transport transport) {
+        int TA_QUIR_PRIW = 9043972;
+        int SINDARPOS = 9043975;
+        int LEMANTO_ANDRA = 9043978;
+        int KAR_HEWO = 9043981;
+        int GANDIUS = 9043984;
+        int OOKOOKOLLY_UNDRI = 9043993;
+        int LEMANTOLLY_UNDRI = 9043989;
+
+        // Get Transport Information
+        String displayInfo = transport.getDisplayInfo();
+        String npcName = transport.getName();
+        String action = transport.getAction();
+
+        final int GLIDER_PARENT_WIDGET = 138;
+        final int GLIDER_CHILD_WIDGET = 0;
+
+        // Check if the widget is already visible
+        boolean isGliderMenuVisible = Rs2Widget.getWidget(GLIDER_PARENT_WIDGET, GLIDER_CHILD_WIDGET) != null;
+        if (!isGliderMenuVisible) {
+            // Find the glider NPC
+            NPC gnome = Rs2Npc.getNpc(npcName);  // Use the NPC name to find the NPC
+            if (gnome == null) {
+                Microbot.log("Gnome not found.");
+                return;
+            }
+
+            // Interact with the gnome glider NPC
+            if (Rs2Npc.interact(gnome, action)) {
+                sleepUntil(() -> !Rs2Widget.isHidden(GLIDER_PARENT_WIDGET, GLIDER_CHILD_WIDGET));
+            }
+        }
+
+
+        // Wait for the widget to become visible
+        boolean widgetVisible = !Rs2Widget.isHidden(GLIDER_PARENT_WIDGET, GLIDER_CHILD_WIDGET);
+        if (!widgetVisible) {
+            Microbot.log("Widget did not become visible within the timeout.");
+            return;
+        }
+
+        if (displayInfo.isEmpty()) return;
+
+        switch (displayInfo) {
+            case "Kar-Hewo":
+                Rs2Widget.clickWidget(KAR_HEWO);
+                sleepUntil(() -> transport.getDestination().distanceTo2D(Rs2Player.getWorldLocation()) < 10);
+                break;
+            case "Ta Quir Priw":
+                Rs2Widget.clickWidget(TA_QUIR_PRIW);
+                sleepUntil(() -> transport.getDestination().distanceTo2D(Rs2Player.getWorldLocation()) < 10);
+                break;
+            case "Sindarpos":
+                Rs2Widget.clickWidget(SINDARPOS);
+                sleepUntil(() -> transport.getDestination().distanceTo2D(Rs2Player.getWorldLocation()) < 10);
+                break;
+            case "Lemanto Andra":
+                Rs2Widget.clickWidget(LEMANTO_ANDRA);
+                sleepUntil(() -> transport.getDestination().distanceTo2D(Rs2Player.getWorldLocation()) < 10);
+                break;
+            case "Gandius":
+                Rs2Widget.clickWidget(GANDIUS);
+                sleepUntil(() -> transport.getDestination().distanceTo2D(Rs2Player.getWorldLocation()) < 10);
+                break;
+            case "Ookookolly Undri":
+                Rs2Widget.clickWidget(OOKOOKOLLY_UNDRI);
+                sleepUntil(() -> transport.getDestination().distanceTo2D(Rs2Player.getWorldLocation()) < 10);
+                break;
+            case "Lemantolly Undri":
+                Rs2Widget.clickWidget(LEMANTOLLY_UNDRI);
+                sleepUntil(() -> transport.getDestination().distanceTo2D(Rs2Player.getWorldLocation()) < 10);
+                break;
+        }
+    }
+
+    // Constants for widget IDs
+    private static final int SLOT_ONE = 26083331;
+    private static final int SLOT_TWO = 26083332;
+    private static final int SLOT_THREE = 26083333;
+    private static final int TELEPORT_BUTTON = 26083354;
+
+    private static final int SLOT_ONE_CW_ROTATION = 26083347;
+    private static final int SLOT_ONE_ACW_ROTATION = 26083348;
+    private static final int SLOT_TWO_CW_ROTATION = 26083349;
+    private static final int SLOT_TWO_ACW_ROTATION = 26083350;
+    private static final int SLOT_THREE_CW_ROTATION = 26083351;
+    private static final int SLOT_THREE_ACW_ROTATION = 26083352;
+    private static Rs2Item startingWeapon = null;
+    private static int startingWeaponId;
+
+    public static void handleFairyRing(WorldPoint origin, String fairyRingCode) {
+
+        if (startingWeapon == null) {
+            startingWeapon = Rs2Equipment.get(EquipmentInventorySlot.WEAPON);
+            startingWeaponId = startingWeapon.getId();
+        }
+
+        // Check if the widget is already visible
+        if (!Rs2Widget.isHidden(ComponentID.FAIRY_RING_TELEPORT_BUTTON)) {
+            rotateSlotToDesiredRotation(SLOT_ONE, Rs2Widget.getWidget(SLOT_ONE).getRotationY(), getDesiredRotation(fairyRingCode.charAt(0)), SLOT_ONE_ACW_ROTATION, SLOT_ONE_CW_ROTATION);
+            rotateSlotToDesiredRotation(SLOT_TWO, Rs2Widget.getWidget(SLOT_TWO).getRotationY(), getDesiredRotation(fairyRingCode.charAt(1)), SLOT_TWO_ACW_ROTATION, SLOT_TWO_CW_ROTATION);
+            rotateSlotToDesiredRotation(SLOT_THREE, Rs2Widget.getWidget(SLOT_THREE).getRotationY(), getDesiredRotation(fairyRingCode.charAt(2)), SLOT_THREE_ACW_ROTATION, SLOT_THREE_CW_ROTATION);
+            Rs2Widget.clickWidget(TELEPORT_BUTTON);
+            Rs2Player.waitForAnimation();
+            if (!Rs2Equipment.isWearing(startingWeaponId)) {
+                sleep(3000, 3600); // Required due to long animation time
+                Microbot.log("Equipping Starting Weapon: " + startingWeaponId);
+                Rs2Inventory.equip(startingWeaponId);
+            }
+        }
+
+
+        if (Rs2Equipment.isWearing("Dramen staff") || Rs2Equipment.isWearing("Lunar staff")) {
+            Microbot.log("Interacting with the fairy ring directly.");
+            var fairyRing = Rs2GameObject.findObjectByLocation(origin);
+            Rs2GameObject.interact(fairyRing, "Configure");
+            Rs2Player.waitForWalking();
+        } else if (Rs2Inventory.contains("Dramen staff")) {
+            Rs2Inventory.equip("Dramen staff");
+            sleep(600);
+        } else if (Rs2Inventory.contains("Lunar staff")) {
+            Rs2Inventory.equip("Lunar staff");
+            sleep(600);
+        }
+    }
+
+    private static void rotateSlotToDesiredRotation(int slotId, int currentRotation, int desiredRotation, int slotAcwRotationId, int slotCwRotationId) {
+        int anticlockwiseTurns = (desiredRotation - currentRotation + 2048) % 2048;
+        int clockwiseTurns = (currentRotation - desiredRotation + 2048) % 2048;
+
+        if (clockwiseTurns <= anticlockwiseTurns) {
+            System.out.println("Rotating slot " + slotId + " clockwise " + (clockwiseTurns / 512) + " times.");
+            for (int i = 0; i < clockwiseTurns / 512; i++) {
+                Rs2Widget.clickWidget(slotCwRotationId);
+                sleep(600, 1200);
+            }
+        } else {
+            System.out.println("Rotating slot " + slotId + " anticlockwise " + (anticlockwiseTurns / 512) + " times.");
+            for (int i = 0; i < anticlockwiseTurns / 512; i++) {
+                Rs2Widget.clickWidget(slotAcwRotationId);
+                sleep(600, 1200);
+            }
+        }
+
+    }
+
+    private static int getDesiredRotation(char letter) {
+        switch (letter) {
+            case 'A':
+            case 'I':
+            case 'P':
+                return 0;
+            case 'B':
+            case 'J':
+            case 'Q':
+                return 512;
+            case 'C':
+            case 'K':
+            case 'R':
+                return 1024;
+            case 'D':
+            case 'L':
+            case 'S':
+                return 1536;
+            default:
+                return -1;
+        }
     }
 }
